--- a/index.html
+++ b/index.html
@@ -1,16 +1,41 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <title>3D Model Viewer</title>
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    <title>展示 .glb 文件</title>
     <style>
-      model-viewer {
+      body {
+        margin: 0;
+        overflow: hidden;
+      }
+      canvas {
         width: 100%;
-        height: 300px;
+        height: 100%;
       }
     </style>
   </head>
   <body>
-    <model-viewer src="https://github.com/da5sdasddasa/DreamGaussian/blob/main/_tmp_ceeafeaf71bb700441140c37e00c66436f4522af_112bfa4bbf58d2d6cd0e4815d7ad42da4c283da11b8d3462fc9951aaa124322b.glb?raw=true" alt="Your Model" auto-rotate camera-controls></model-viewer>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
+    <script>
+      const scene = new THREE.Scene();
+      const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+
+      const renderer = new THREE.WebGLRenderer();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      document.body.appendChild(renderer.domElement);
+
+      const loader = new THREE.GLTFLoader();
+      loader.load('https://github.com/da5sdasddasa/DreamGaussian/blob/main/_tmp_ceeafeaf71bb700441140c37e00c66436f4522af_112bfa4bbf58d2d6cd0e4815d7ad42da4c283da11b8d3462fc9951aaa124322b.glb', function(gltf) {
+        scene.add(gltf.scene);
+      });
+
+      camera.position.z = 5;
+
+      function animate() {
+        requestAnimationFrame(animate);
+        renderer.render(scene, camera);
+      }
+
+      animate();
+    </script>
   </body>
 </html>
