--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       document.body.appendChild(renderer.domElement);
 
       const loader = new THREE.GLTFLoader();
-      loader.load('https://github.com/da5sdasddasa/DreamGaussian/blob/main/_tmp_ceeafeaf71bb700441140c37e00c66436f4522af_112bfa4bbf58d2d6cd0e4815d7ad42da4c283da11b8d3462fc9951aaa124322b.glb', function(gltf) {
+      loader.load('https://github.com/da5sdasddasa/da5sdasddasa.github.io/blob/main/_tmp_ceeafeaf71bb700441140c37e00c66436f4522af_112bfa4bbf58d2d6cd0e4815d7ad42da4c283da11b8d3462fc9951aaa124322b.glb', function(gltf) {
         scene.add(gltf.scene);
       });
 
